@@ -200,5 +200,7 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Correction liées aux spécificités de Ubuntu 16.04
   * [DEV] Correction du problème de USER vide au moment du useradd dans
     docker-install.sh
+  * [DEV] Correction sur la valeur de USER_LOGIN pour l'install de
+    docker
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
